--- a/1-1.html
+++ b/1-1.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <head>
-<title>Лабораторная работа №1</title>
+<title>Лабораторная работа №1 Измененная</title>
 <link rel="stylesheet" type="text/css" href="../css/main.css" />
 <link rel="stylesheet" type="text/css" href="../css/individ.css" />
 </head>
